Refactor script generation to support both Linux and Windows, adding error handling and logging